add admin config

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -5,16 +5,14 @@
     <meta name="robots" content="noindex" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>DANCE POINT — Admin</title>
-    <!-- официальная сборка Decap CMS -->
-    <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+    <!-- Netlify Identity widget (нужен для Git Gateway) -->
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    <!-- Decap CMS -->
+    <script src="https://unpkg.com/decap-cms@^3.1.9/dist/decap-cms.js"></script>
     <style>
       :root { --brand:#964B4B; }
-      .css-1v7k1wq-ToolbarContainer { border-color: rgba(0,0,0,.06); }
-      .cms-editor-visual, .cms-editor-raw { font-family: Inter, system-ui, Arial; }
-      .css-k4k4q7-Button { background: var(--brand) !important; } /* акцентные кнопки */
+      body { font-family: Inter, system-ui, Arial; }
     </style>
   </head>
-  <body>
-    <!-- CMS сам монтируется -->
-  </body>
+  <body></body>
 </html>
